feat(config): re-parent configurators onto JsfTestSetup and retarget annotation
Re-parent ApplicationConfigurator, ComponentConfigurator and
RequestConfigurator onto the new JsfTestSetup interface (adding @Override
on their configure methods, retaining @Deprecated). Change
@JsfTestConfiguration.value() to Class<? extends JsfTestSetup>[] so
consumers no longer need @SuppressWarnings to reference the configurator
types. Broaden ConfigurationHelper dispatch to invoke all three default
methods for a bare JsfTestSetup implementor while preserving per-sub-interface
dispatch for legacy implementors without double-invocation.

Add JsfTestSetupDispatchTest covering the bare-implementor dispatch path.
Existing legacy-implementing tests (ConfigurableFacesTestTest,
JsfTestConfigurationAggregationTest, EnableJsfEnvironmentNestedTest) compile
and pass unchanged, confirming backward compatibility (226 tests green).

Co-Authored-By: Claude <noreply@anthropic.com>